--- a/styles.css
+++ b/styles.css
@@ -129,5 +129,44 @@ border: 4px solid #3882f6;;
 }
 
 .third{
+    display: flex;
+    flex-direction: column;
     background-color: #E5E7EB;
+    padding: 200px;
+    flex-wrap: wrap;
+}
+
+.quote{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    width: 830px;
+    align-self: center;
+    color: #1F2937;
+}
+
+.god{
+    padding-right: 450px;
+    align-self: flex-end;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.fourth{
+    display: flex;
+    padding: 180px;
+}
+
+.smol{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882f6;
+    margin: auto;
+    width: 1800px;
+    border: 5px;
+    border-radius: 10px;
+    height: 150px;
 }
