--- a/styles.css
+++ b/styles.css
@@ -161,21 +161,47 @@ border: 4px solid #3882f6;;
 .smol{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     background-color: #3882f6;
     margin: auto;
-    width: 1800px;
+    width: 1700px;
     border: 5px;
     border-radius: 10px;
-    height: 150px;
+    height: 50px;
+    justify-content: space-between;
+    padding: 50px;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
 .action{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
 }
 
-.call{
-   margin: auto;
+.leg{
+   margin: 0%;
+   font-size: 24px;
+   font-weight: bolder;
+   color: #F9FAF8;
+}
+
+.sinkin{
+    border-color: #F9FAF8;
+    border-style: solid;
+    border-width:2px;
+    font-size: 18px;
+}
+
+.finale{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #F9FAF8;
+    min-height: 150px;
 }
